fixed the overlap in blog-list images < viewports

--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -1363,9 +1363,7 @@ a{
         border-right: 0;
 
         .normal-image{
-          @media only screen and (min-width:@bp_md){
-            .h();
-          }
+          opacity:0;
         }
       }
 
